--- a/src/pug/blocks/index/price.pug
+++ b/src/pug/blocks/index/price.pug
@@ -2,7 +2,7 @@
 	.g-wrapper
 		.price__container
 			.price__container-titles
-				.price__container-titles-title Подбор рациона
+				.price__container-titles-title Цены и тарифы
 				.price__container-titles-item
 					.price__container-titles-item-container
 						span Это легко! Раз, два, три.
