--- a/src/pug/blocks/index/top.pug
+++ b/src/pug/blocks/index/top.pug
@@ -21,7 +21,7 @@
 							.top__container-item-subtitle На снижение!
 							.top__container-item-desc с нами легко похудеть<br> быстро и вкусно
 							a(href="#").top__container-item-button
-								span Начать худеть
+								span Начать худеть!
 							//- .top__container-item__blocks
 							//- 	.blocks__item.blocks__item-active
 							//- 		.blocks__item-bg
