--- a/src/stylus/blocks/common/_header.styl
+++ b/src/stylus/blocks/common/_header.styl
@@ -1,3 +1,5 @@
+.headerMob
+	display none
 .header
 	background-color $white
 	.header__container
@@ -85,3 +87,174 @@
 					transition .3s
 					&:hover
 						color $green
+.mobMenu
+	position fixed
+	height 100%
+	right 0
+	top 0
+	left 0
+	z-index -1
+	background-color $white
+	transition .3s
+	opacity 0
+	visibility hidden
+	&-active
+		z-index 9999
+		visibility visible
+		opacity 1
+	&__block
+		height 60px
+		display flex
+		align-items center
+		justify-content center
+		&-phone
+			position absolute
+			left 15px
+			top 10px
+			& a
+				width 40px
+				height 40px
+				border-radius 50%
+				border 1px solid $green
+				display flex
+				align-items center
+				transition .3s
+				justify-content center
+				& svg path
+					transition .3s
+				&:hover svg path
+					fill $text
+				&:hover
+					border-color $text
+		&-close
+			position absolute
+			right 15px
+			cursor pointer
+			top 10px
+			width 40px
+			display flex
+			align-items center
+			justify-content center
+			height 40px
+			& svg path
+				transition .3s
+			&:hover svg path
+				fill $green
+	&__menu
+		height calc(100% - 60px)
+		&-location
+			margin-top 20px
+			display flex
+			align-items center
+			justify-content center
+			& span
+				&:nth-child(1)
+					font-family $Light
+					font-size 1rem
+					line-height 20px
+					color $text
+					margin-right 5px
+				&:nth-child(2)
+					font-family $Bold
+					font-size 1rem
+					line-height 20px
+					color $text
+					margin-right 5px
+		&-items
+			margin-top 20px
+			display flex
+			flex-wrap wrap
+			&-item
+				flex-basis 100%
+				padding 17.5px 0
+				font-size 1.5rem
+				line-height 20px
+				text-align center
+				color $text
+				font-family $Bold
+		&-button
+			display flex
+			justify-content center
+			margin-top 32.5px
+			& div
+				padding 17px 40px
+				align-items center
+				display flex
+				background-color $green
+				border-radius 80px
+				cursor pointer
+				transition .3s
+				border 1px solid transparent
+				& span
+					font-family $Black
+					color $white
+					font-size 1rem
+					transition .3s
+					line-height 16px
+				& svg
+					margin-right 10px
+				& svg path
+					transition .3s
+				&:hover svg path
+					fill $green
+				&:hover span
+					color $green
+				&:hover
+					background-color $white
+					border-color $green
+@media(max-width:1170px)
+	.header
+		.header
+			&__container2
+				&-menu
+					.menu__item
+						margin-right 20px
+						& a
+							font-size 0.9rem
+@media(max-width:900px)
+	.header
+		display none
+	.headerMob
+		display flex
+		position fixed
+		top 0
+		left 0
+		width 100%
+		z-index 11
+		height 60px
+		align-items center
+		justify-content center
+		background-color $white
+		&__phone
+			position absolute
+			left 15px
+			top 10px
+			& a
+				width 40px
+				height 40px
+				border-radius 50%
+				border 1px solid $green
+				display flex
+				align-items center
+				transition .3s
+				justify-content center
+				& svg path
+					transition .3s
+				&:hover svg path
+					fill $text
+				&:hover
+					border-color $text
+		&__menu
+			position absolute
+			right 15px
+			cursor pointer
+			top 10px
+			width 40px
+			display flex
+			align-items center
+			justify-content center
+			height 40px
+			& svg rect
+				transition .3s
+			&:hover svg rect
+				fill $green
