--- a/src/stylus/blocks/index/_top.styl
+++ b/src/stylus/blocks/index/_top.styl
@@ -549,3 +549,172 @@
 						background-color #2ABEFD
 					&:nth-child(3)
 						background-color #F55A38
+@media(max-width:991px)
+	.top
+		&-bg2
+			right -25%
+			top 75%
+		&-bg3
+			right -20%
+			top 27%
+			transform scale(.5)
+		&-backItems
+			display none
+		&__container
+			z-index 10
+			&-item
+				flex-basis 100%
+	.top2
+		&-bg2
+			right -25%
+			top 75%
+		&-bg3
+			right -20%
+			top 27%
+			transform scale(.5)
+		&-backItems
+			display none
+		&__container
+			z-index 10
+			&-item
+				flex-basis 100%
+	.top3
+		&-bg2
+			right -25%
+			top 75%
+		&-bg3
+			right -20%
+			top 27%
+			transform scale(.5)
+		&-backItems
+			display none
+		&__container
+			z-index 10
+			&-item
+				flex-basis 100%
+				&-info
+					border-left none
+					flex-wrap wrap
+					&-block
+						&:nth-child(1),
+						&:nth-child(2)
+							flex-basis 100%
+						&:nth-child(1)
+							padding-left 0
+							display flex
+							align-content flex-end
+							margin-bottom 15px
+						&:nth-child(2)
+							justify-content flex-start
+						&-title
+							margin-bottom 0
+							line-height 54px
+						&-desc
+							display flex
+							line-height 54px
+							margin-left 10px
+							align-content flex-end
+@media(max-width:900px)
+	.swiper-container-top
+		margin-top 60px
+@media(max-width:414px)
+	.top
+		&-bg3
+			right -34%
+			top 32%
+			transform scale(.4)
+		&__container
+			&-item
+				align-content flex-start
+				padding-top 50px
+				&-title
+					text-align center
+					font-size 1.625rem
+					line-height 26px
+					margin-bottom 10px
+				&-subtitle
+					font-size 2.5rem
+					line-height 40px
+					text-align center
+					margin-bottom 15px
+				&-desc
+					margin-left 0
+					text-align center
+					margin-bottom 28px
+					&:before
+						top -10px
+						transform rotate(0deg)
+						width 40px
+						height 10px
+						left calc(50% - 20px)
+				&-button
+					display flex
+					align-items center
+					justify-content center
+					& span
+						margin 0 auto
+						padding 13px 35px
+						text-align center
+	.top2
+		&-bg3
+			right -34%
+			top 32%
+			transform scale(.4)
+		&__container
+			&-item
+				justify-content center
+				&-title
+					text-align center
+					font-size 1.625rem
+					line-height 26px
+					margin-bottom 10px
+				&-subtitle
+					font-size 2.5rem
+					line-height 40px
+					text-align center
+					margin-bottom 15px
+				&-desc
+					margin-left 0
+					text-align center
+					margin-bottom 28px
+					&:before
+						top -10px
+						transform rotate(0deg)
+						width 40px
+						height 10px
+						left calc(50% - 20px)
+				&-button
+					display flex
+					align-items center
+					justify-content center
+					& span
+						margin 0 auto
+						padding 13px 35px
+						text-align center
+	.top3
+		&-bg3
+			right -34%
+			top 32%
+			transform scale(.4)
+		&__container
+			&-item
+				justify-content center
+				&-title
+					text-align center
+					font-size 1.625rem
+					line-height 26px
+					margin-bottom 10px
+				&-button
+					display flex
+					align-items center
+					justify-content center
+					& span
+						margin 0 auto
+						padding 13px 35px
+						text-align center
+				&-info
+					&-block
+						&:nth-child(1)
+							justify-content center
+						&:nth-child(2)
+							justify-content center
