--- a/src/css/blocks/index/_top.css
+++ b/src/css/blocks/index/_top.css
@@ -894,3 +894,290 @@
 .top3__container-item__blocks .blocks__item:nth-child(3) {
   background-color: #f55a38;
 }
+@media (max-width: 991px) {
+  .top-bg2 {
+    right: -25%;
+    top: 75%;
+  }
+  .top-bg3 {
+    right: -20%;
+    top: 27%;
+    -webkit-transform: scale(0.5);
+        -ms-transform: scale(0.5);
+            transform: scale(0.5);
+  }
+  .top-backItems {
+    display: none;
+  }
+  .top__container {
+    z-index: 10;
+  }
+  .top__container-item {
+    -webkit-flex-basis: 100%;
+        -ms-flex-preferred-size: 100%;
+            flex-basis: 100%;
+  }
+  .top2-bg2 {
+    right: -25%;
+    top: 75%;
+  }
+  .top2-bg3 {
+    right: -20%;
+    top: 27%;
+    -webkit-transform: scale(0.5);
+        -ms-transform: scale(0.5);
+            transform: scale(0.5);
+  }
+  .top2-backItems {
+    display: none;
+  }
+  .top2__container {
+    z-index: 10;
+  }
+  .top2__container-item {
+    -webkit-flex-basis: 100%;
+        -ms-flex-preferred-size: 100%;
+            flex-basis: 100%;
+  }
+  .top3-bg2 {
+    right: -25%;
+    top: 75%;
+  }
+  .top3-bg3 {
+    right: -20%;
+    top: 27%;
+    -webkit-transform: scale(0.5);
+        -ms-transform: scale(0.5);
+            transform: scale(0.5);
+  }
+  .top3-backItems {
+    display: none;
+  }
+  .top3__container {
+    z-index: 10;
+  }
+  .top3__container-item {
+    -webkit-flex-basis: 100%;
+        -ms-flex-preferred-size: 100%;
+            flex-basis: 100%;
+  }
+  .top3__container-item-info {
+    border-left: none;
+    -webkit-flex-wrap: wrap;
+        -ms-flex-wrap: wrap;
+            flex-wrap: wrap;
+  }
+  .top3__container-item-info-block:nth-child(1),
+  .top3__container-item-info-block:nth-child(2) {
+    -webkit-flex-basis: 100%;
+        -ms-flex-preferred-size: 100%;
+            flex-basis: 100%;
+  }
+  .top3__container-item-info-block:nth-child(1) {
+    padding-left: 0;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-align-content: flex-end;
+        -ms-flex-line-pack: end;
+            align-content: flex-end;
+    margin-bottom: 15px;
+  }
+  .top3__container-item-info-block:nth-child(2) {
+    -webkit-box-pack: start;
+    -webkit-justify-content: flex-start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+  }
+  .top3__container-item-info-block-title {
+    margin-bottom: 0;
+    line-height: 54px;
+  }
+  .top3__container-item-info-block-desc {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    line-height: 54px;
+    margin-left: 10px;
+    -webkit-align-content: flex-end;
+        -ms-flex-line-pack: end;
+            align-content: flex-end;
+  }
+}
+@media (max-width: 900px) {
+  .swiper-container-top {
+    margin-top: 60px;
+  }
+}
+@media (max-width: 414px) {
+  .top-bg3 {
+    right: -34%;
+    top: 32%;
+    -webkit-transform: scale(0.4);
+        -ms-transform: scale(0.4);
+            transform: scale(0.4);
+  }
+  .top__container-item {
+    -webkit-align-content: flex-start;
+        -ms-flex-line-pack: start;
+            align-content: flex-start;
+    padding-top: 50px;
+  }
+  .top__container-item-title {
+    text-align: center;
+    font-size: 1.625rem;
+    line-height: 26px;
+    margin-bottom: 10px;
+  }
+  .top__container-item-subtitle {
+    font-size: 2.5rem;
+    line-height: 40px;
+    text-align: center;
+    margin-bottom: 15px;
+  }
+  .top__container-item-desc {
+    margin-left: 0;
+    text-align: center;
+    margin-bottom: 28px;
+  }
+  .top__container-item-desc:before {
+    top: -10px;
+    -webkit-transform: rotate(0deg);
+        -ms-transform: rotate(0deg);
+            transform: rotate(0deg);
+    width: 40px;
+    height: 10px;
+    left: -webkit-calc(50% - 20px);
+    left: calc(50% - 20px);
+  }
+  .top__container-item-button {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .top__container-item-button span {
+    margin: 0 auto;
+    padding: 13px 35px;
+    text-align: center;
+  }
+  .top2-bg3 {
+    right: -34%;
+    top: 32%;
+    -webkit-transform: scale(0.4);
+        -ms-transform: scale(0.4);
+            transform: scale(0.4);
+  }
+  .top2__container-item {
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .top2__container-item-title {
+    text-align: center;
+    font-size: 1.625rem;
+    line-height: 26px;
+    margin-bottom: 10px;
+  }
+  .top2__container-item-subtitle {
+    font-size: 2.5rem;
+    line-height: 40px;
+    text-align: center;
+    margin-bottom: 15px;
+  }
+  .top2__container-item-desc {
+    margin-left: 0;
+    text-align: center;
+    margin-bottom: 28px;
+  }
+  .top2__container-item-desc:before {
+    top: -10px;
+    -webkit-transform: rotate(0deg);
+        -ms-transform: rotate(0deg);
+            transform: rotate(0deg);
+    width: 40px;
+    height: 10px;
+    left: -webkit-calc(50% - 20px);
+    left: calc(50% - 20px);
+  }
+  .top2__container-item-button {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .top2__container-item-button span {
+    margin: 0 auto;
+    padding: 13px 35px;
+    text-align: center;
+  }
+  .top3-bg3 {
+    right: -34%;
+    top: 32%;
+    -webkit-transform: scale(0.4);
+        -ms-transform: scale(0.4);
+            transform: scale(0.4);
+  }
+  .top3__container-item {
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .top3__container-item-title {
+    text-align: center;
+    font-size: 1.625rem;
+    line-height: 26px;
+    margin-bottom: 10px;
+  }
+  .top3__container-item-button {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .top3__container-item-button span {
+    margin: 0 auto;
+    padding: 13px 35px;
+    text-align: center;
+  }
+  .top3__container-item-info-block:nth-child(1) {
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .top3__container-item-info-block:nth-child(2) {
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
