--- a/src/stylus/blocks/index/_diet.styl
+++ b/src/stylus/blocks/index/_diet.styl
@@ -9,6 +9,7 @@
 		width 100%
 		z-index 4
 		left 0
+		right 0
 	&__container
 		&-titles
 			display flex
@@ -52,7 +53,6 @@
 							line-height 23px
 							font-size 1.125rem
 							margin-right 10px
-
 		&-form
 			display flex
 			flex-wrap wrap
@@ -65,6 +65,8 @@
 				margin-bottom 15px
 			& input
 				display none
+			.diet__inputs
+				display flex
 			.diet__input
 				margin-bottom 40px
 				flex-basis calc(21% - 20px)
@@ -73,11 +75,11 @@
 				transition .3s
 				cursor pointer
 				box-shadow 0px 20px 30px rgba(0, 0, 0, 0.1)
-				&:nth-child(2)
+				&:nth-child(1)
 					background-color #A3DE5B
-				&:nth-child(3)
+				&:nth-child(2)
 					background-color #FDC128
-				&:nth-child(4)
+				&:nth-child(3)
 					background-color #2ABEFD
 				&-bg
 					position absolute
@@ -138,13 +140,16 @@
 				padding 11px
 				&:hover
 					border-color $white
+			.diet__types
+				display flex
+				margin-bottom 45px
+				overflow-x scroll
 			.diet__type
-				width 173px
+				min-width 173px
 				height 60px
 				margin-right 20px
 				background-color $white
 				border-radius 80px
-				margin-bottom 45px
 				transition .3s
 				&:hover
 					background-color $green
@@ -170,21 +175,31 @@
 						transition .3s
 			.diet__blocks
 				flex-basis 100%
-				display flex
-				justify-content space-between
+				display grid
+				grid-template-columns repeat(1fr, 5)
 				overflow hidden
 				&-block
-					flex-basis 48%
 					display flex
 					flex-wrap wrap
 					position relative
+					&:nth-child(1)
+						grid-column 1 / 3
+						grid-row 1 / 2
+					&:nth-child(2)
+						grid-column 1 / 3
+						grid-row 2 / 3
+					&:nth-child(3)
+						grid-column 3 / 6
+						grid-row 1 / 3
+					&__types
+						display flex
+						margin-bottom 34px
 					&__type
 						width 173px
 						height 60px
 						margin-right 20px
 						background-color $white
 						border-radius 80px
-						margin-bottom 34px
 						transition .3s
 						&:hover
 							background-color $green
@@ -322,11 +337,11 @@
 									margin-left 3px
 									font-family $Black
 									color $green
-					&:nth-child(2)
-						flex-basis 44%
+					&:nth-child(3)
 						background linear-gradient(323.59deg, #64BB4F 6.62%, #80DC6A 81.89%)
 						border-radius 40px 40px 0 0
 						overflow hidden
+						margin-left 20px
 						.swiper-button-prev,
 						.swiper-button-next
 							background $white
@@ -398,3 +413,109 @@
 						line-height 32px
 						color $white
 						font-family $Black
+@media(max-width:1170px)
+	.diet
+		&__container
+			&-form
+				.diet__blocks
+					&-block
+						&:nth-child(1)
+							grid-column 1 / 6
+							grid-row 1 / 2
+						&:nth-child(2)
+							grid-column 1 / 6
+							grid-row 3 / 4
+						&:nth-child(3)
+							grid-column 2 / 5
+							grid-row 2 / 3
+							margin-left 0
+							border-radius 40px
+							margin-bottom 30px
+@media(max-width:991px)
+	.diet
+		padding-top 50px
+		&__container
+			&-titles
+				justify-content center
+				flex-wrap wrap
+				margin-bottom 30px
+				&-item
+					flex-basis calc(100% - 15px)
+					margin-left 15px
+					display flex
+					justify-content center
+					align-items center
+					&-container
+						flex-wrap wrap
+						justify-content center
+						& span
+							&:nth-child(1)
+								text-align center
+								flex-basis 100%
+				&-title
+					flex-basis 100%
+					margin-bottom 20px
+					text-align center
+			&-form
+				.diet__inputs
+					display flex
+					margin-bottom 40px
+					overflow-x scroll
+					.diet__input
+						margin-bottom 0
+						min-width 200px
+@media(max-width:767px)
+	.diet
+		&__container
+			&-form
+				.diet__blocks
+					&-block
+						&-stats
+							justify-content center
+							&-stat
+								margin-right 15px
+								&:last-child
+									margin-right 0
+						&:nth-child(3)
+							grid-column 1 / 6
+						&-footer
+							flex-wrap wrap
+							&-totals
+								flex-basis 100%
+								order 1
+								margin-bottom 15px
+								margin-left 0
+								justify-content center
+							&-button
+								flex-basis 100%
+								order 2
+@media(max-width:500px)
+	.diet
+		&__container
+			&-form
+				.diet__blocks
+					&-block
+						&-bigtitle
+							top 30px
+						&:nth-child(3)
+							.swiper-button-next,
+							.swiper-button-prev
+								top 40px
+							.swiper-button-next
+								right 20px
+							.swiper-button-prev
+								left 20px
+@media(max-width:414px)
+	.diet
+		&__container
+			&-form
+				.diet__blocks
+					&-block
+						&-stats
+							flex-wrap wrap
+							justify-content flex-start
+							&-stat
+								margin-bottom 10px
+						&__type
+							width 112px
+							height 34px
