--- a/src/stylus/blocks/index/_help.styl
+++ b/src/stylus/blocks/index/_help.styl
@@ -27,6 +27,7 @@
 		width 100%
 		left 0
 		z-index 4
+		right 0
 	&-line2
 		transform scale(-1, 1)
 		position absolute
@@ -34,6 +35,7 @@
 		left 0
 		width 100%
 		z-index 8
+		right 0
 	&__container
 		display flex
 		justify-content flex-end
@@ -86,5 +88,40 @@
 					box-shadow 0px 10px 20px rgba(252, 123, 50, 0.4)
 				&:hover a
 					color $text
+@media(max-width:1360px)
+	.help
+		&-block
+			left -10%
+		&-bg
+			&:after
+				left -29%
+@media(max-width:1170px)
+	.help
+		&-block
+			display none
+		&-bg
+			display none
+		&__container
+			&-block
+				flex-basis 100%
+				&-items
+					&-item
+						justify-content flex-start
+@media(max-width:991px)
+	.help
+		padding 50px 0
+		&__container
+			&-block
+				&-title
+					text-align center
+				&-items
+					flex-wrap wrap
+					margin-bottom 0
+					&-item
+						flex-basis 100%
+						margin-right 0
+						margin-bottom 33px
+						& svg
+							flex-basis 12%
 
 
